<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.SignUpActivity"
        android:orientation="vertical"
        android:gravity="center">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />

    <EditText
            android:id="@+id/email_sign_up_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_mail"
            android:inputType="textEmailAddress"/>

    <EditText
            android:id="@+id/login_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_login"
            android:inputType="textPassword"/>

    <EditText
            android:id="@+id/password_sign_up_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"/>

    <EditText
            android:id="@+id/password_confirm_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_hint_confirm_password"
            android:inputType="textPassword"/>

    <Button
            android:id="@+id/complete_sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_register" />


</LinearLayout>