<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".ui.fragments.PasswordFragment">

    <EditText
            android:id="@+id/old_password_edit_text"
            android:hint="@string/password_fragment_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    <EditText
            android:id="@+id/new_password_edit_text"
            android:hint="@string/password_fragment_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    <EditText
            android:id="@+id/confirm_password_edit_text"
            android:hint="@string/password_fragment_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    <Button
            android:id="@+id/change_password_button"
            android:text="@string/password_fragment_confirm_password"
            android:hint="@string/password_fragment_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

</LinearLayout>