<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ui.fragments.ProfileFragment">

    <ImageView
            android:id="@+id/avatar_image_view"
            android:layout_width="215dp"
            android:layout_height="197dp"
            android:src="@drawable/kotlin"
            app:layout_constraintBottom_toTopOf="@+id/guideline12"
            app:layout_constraintEnd_toStartOf="@+id/guideline10"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline10"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toTopOf="@+id/guideline12" />

    <TextView
            android:id="@+id/email_text_view"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/profile_random_tmp_mail"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/name_edit_text"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/name_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/name_edit_text" />

    <Button
            android:id="@+id/change_password_button"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/profile_change_password"
            app:layout_constraintEnd_toEndOf="@+id/email_confirm_button"
            app:layout_constraintStart_toStartOf="@+id/email_confirm_button"
            app:layout_constraintTop_toBottomOf="@+id/email_confirm_button" />

    <Button
            android:id="@+id/email_confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/profile_confirm_mail"
            app:layout_constraintEnd_toStartOf="@+id/guideline10"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/email_text_view" />

    <Button
            android:id="@+id/sign_out_button"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/profile_exit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/change_password_button"
            app:layout_constraintStart_toStartOf="@+id/change_password_button" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>